New in master
=============

Features
--------

* Support passing ``--poll`` to ``nikola auto`` to better deal with symlink farms.

Bugfixes
--------

* Fix ``nikola new_post --available-formats`` crashing with TypeError
  (Issue #3750)
* Fix the new plugin manager not loading plugins if the plugin folder is a symlink (Issue #3741)
* Fix the ``nikola plugin`` command not working (Issue #3736)
* Remove no longer used leftovers of annotations support (Issue #3764)

Other
-----

* Nikola now requires Python 3.8 or newer.
* Nikola has adopted a policy for Python version support,
  promising support for versions supported by the Python core team,
  Ubuntu LTS, or Debian stable, and taking into consideration
  Debian oldstable and PyPy.
* Remove polyfill from `polyfill.io`.

New in v8.3.0
=============

Features
--------

* Implement a new plugin manager from scratch to replace Yapsy,
  which does not work on Python 3.12 due to Python 3.12 carelessly
  removing parts of the standard library (Issue #3719)
* Support for Discourse as comment system (Issue #3689)

Bugfixes
--------

* Fix loading of templates from plugins with ``__init__.py`` files
  (Issue #3725)
* Fix margins of paragraphs at the end of sections (Issue #3704)
* Ignore ``.DS_Store`` files in listing indexes (Issue #3698)
* Fix baguetteBox.js invoking in the base theme (Issue #3687)
* Fix development (preview) server ``nikola auto``
  for non-root SITE_URL, in particular when URL_TYPE is full_path.
  (Issue #3715)

For plugin developers
---------------------

Nikola now requires the ``.plugin`` file to contain a ``[Nikola]``
section with a ``PluginCategory`` entry set to the name of the plugin
category class. This was already required by ``plugins.getnikola.com``,
but you may have custom plugins that don’t have this set.

New in v8.2.4
=============

Features
--------

* Add a ``-q``, ``--ignore-query-strings`` option to ignore query strings
  for internal links, allowing their use for cache busting