@@ -9,6 +9,8 @@ Features
 Bugfixes
 --------
 
+* Remove insecure HTTP fallback from ``nikola plugin``
+* Fix the ``nikola plugin`` command not working (Issue #3736, #3737)
 * Fix ``nikola new_post --available-formats`` crashing with TypeError
   (Issue #3750)
 * Fix the new plugin manager not loading plugins if the plugin folder is a symlink (Issue #3741)
